before Jabref update

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -252,6 +252,34 @@
   timestamp = {2016.07.21},
 }
 
+@Article{Atay2014,
+  author        = {Atay, F. M. and Liu, S.},
+  title         = {Cheeger constants, structural balance, and spectral clustering analysis for signed graphs},
+  journal       = {arXiv},
+  year          = {2014},
+  volume        = {math.CO},
+  pages         = {1411.3530},
+  __markedentry = {[Vincent:]},
+  file          = {:Cheeger constants, structural balance, and spectral clustering analysis for signed graphs.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+  url           = {https://arxiv.org/abs/1411.3530},
+}
+
+@Article{Atay2014a,
+  author        = {Atay, F. M. and Tunçel, H.},
+  title         = {On the spectrum of the normalized Laplacian for signed graphs: Interlacing, contraction, and replication},
+  journal       = {Linear Algebra and its Applications},
+  year          = {2014},
+  volume        = {442},
+  pages         = {165-177},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.laa.2013.08.022},
+  file          = {:On the spectrum of the normalized Laplacian for signed graphs- Interlacing, contraction, and replication.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+}
+
 @Book{Bales1970,
   title     = {Personality and Interpersonal Behavior},
   publisher = {Holt, Rinehart and Winston},
@@ -525,6 +553,20 @@
   file          = {:Two Algorithms for Relaxed Structural Balance Partitioning- Linking Theory, Models, and Data to Understand Social Network Phenomena.pdf:PDF},
   owner         = {Vincent},
   timestamp     = {2017.06.01},
+}
+
+@Article{Cai2010,
+  author    = {Cai, J.-F. and Candès, E. J. and Shen, Z.},
+  title     = {A singular value thresholding algorithm for matrix completion},
+  journal   = {SIAM Journal on Optimization},
+  year      = {2010},
+  volume    = {20},
+  number    = {4},
+  pages     = {1956-1982},
+  doi       = {10.1137/080738970},
+  file      = {:A singular value thresholding algorithm for matrix completion.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.25},
 }
 
 @Article{Cai2014b,
@@ -1391,6 +1433,21 @@
   timestamp = {2015.06.04},
 }
 
+@Article{Germina2011,
+  author        = {Germina, K. A. and Hameed, S. K. and Zaslavsky, T.},
+  title         = {On products and line graphs of signed graphs, their eigenvalues and energy},
+  journal       = {Linear Algebra and its Applications},
+  year          = {2011},
+  volume        = {435},
+  number        = {10},
+  pages         = {2432-2450.},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.laa.2010.10.026},
+  file          = {:On products and line graphs of signed graphs, their eigenvalues and energy.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+}
+
 @Article{Ghosn2004,
   author    = {Ghosn, F. and Palmer, G. and Bremer, S.},
   title     = {The MID3 Data Set, 1993–2001: Procedures, Coding Rules, and Description},
@@ -1644,6 +1701,19 @@
   url       = {https://www.researchgate.net/publication/216638219_Structural_Models_An_Introduction_to_the_Theory_of_Directed_GraphsWiley_New_York},
 }
 
+@Article{Harary1966,
+  author    = {Harary, F. and Palmer, E.},
+  title     = {Enumeration of mixed graphs},
+  journal   = {Proceedings of the American Mathematical Society},
+  year      = {1966},
+  volume    = {17},
+  pages     = {682-687},
+  doi       = {10.1090/S0002-9939-1966-0191845-4},
+  file      = {:Enumeration of mixed graphs.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.26},
+}
+
 @Article{Harary1968,
   author    = {Harary, F. and Cartwright, D.},
   title     = {On the Coloring of Signed Graphs.},
@@ -1778,6 +1848,21 @@
   owner         = {Vincent},
   timestamp     = {2017.04.06},
   url           = {https://vvvvw.aaai.org/Papers/Symposia/Spring/2008/SS-08-06/SS08-06-007.pdf},
+}
+
+@Article{Hou2003,
+  author        = {Hou, Y.-P. and Li, J.-S. and Pan, Y.-L.},
+  title         = {On the Laplacian eigenvalues of signed graphs},
+  journal       = {Linear Multilinear Algebra},
+  year          = {2003},
+  volume        = {51},
+  number        = {1},
+  pages         = {21-30},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1080/0308108031000053611},
+  file          = {:On the Laplacian eigenvalues of signed graphs.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
 }
 
 @Article{Hou2005,
@@ -2345,6 +2430,34 @@
   file      = {:Quantitative function for community detection.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2011.11.15},
+}
+
+@Article{Li2008f,
+  author        = {Li, H.-H. and Li, J.-S.},
+  title         = {An upper bound on the Laplacian spectral radius of the signed graphs},
+  year          = {2008},
+  volume        = {28},
+  number        = {2},
+  pages         = {345-359},
+  __markedentry = {[Vincent:]},
+  file          = {:An upper bound on the Laplacian spectral radius of the signed graphs.pdf:PDF},
+  journa        = {Discussiones Mathematicae Graph Theory},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+}
+
+@Article{Li2009d,
+  author        = {Li, H.-H. and Li, J.-S.},
+  title         = {Note on the normalized Laplacian eigenvalues of signed graphs},
+  journal       = {Australasian Journal of Combinatorics},
+  year          = {2009},
+  volume        = {44},
+  pages         = {153-162},
+  __markedentry = {[Vincent:]},
+  file          = {:Note on the normalized Laplacian eigenvalues of signed graphs.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+  url           = {https://pdfs.semanticscholar.org/2aea/e01267a70213ae313a85fe65babafad27e4f.pdf},
 }
 
 @InProceedings{Li2010f,
@@ -3213,6 +3326,20 @@
   timestamp = {2016.01.06},
 }
 
+@Article{Reff2011,
+  author        = {Reff, N.},
+  title         = {New bounds for the Laplacian spectral radius of a signed graph},
+  journal       = {arXiv},
+  year          = {2011},
+  volume        = {math.CO},
+  pages         = {1103.4629},
+  __markedentry = {[Vincent:]},
+  file          = {:New bounds for the Laplacian spectral radius of a signed graph.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+  url           = {https://arxiv.org/abs/1103.4629},
+}
+
 @Article{Reichardt2006,
   author    = {Reichardt, J. and Bornholdt, S.},
   title     = {Statistical mechanics of community detection},
@@ -3622,6 +3749,20 @@
   timestamp = {2017.04.12},
 }
 
+@Article{Smith1988,
+  author    = {Smith, H. L.},
+  title     = {Systems of ordinary differential equations which generate an order preserving flow. A survey of results},
+  journal   = {SIAM Review},
+  year      = {1988},
+  volume    = {30},
+  number    = {1},
+  pages     = {87-113},
+  doi       = {10.1137/1030003},
+  file      = {:Systems of ordinary differential equations which generate an order preserving flow. A survey of results.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.25},
+}
+
 @Article{Sontag2007,
   author    = {Sontag, E. D.},
   title     = {Monotone and near-monotone biochemical networks},
@@ -3689,6 +3830,35 @@
   file          = {:Fast computing global structural balance in signed networks based on memetic algorithm.pdf:PDF},
   owner         = {Vincent},
   timestamp     = {2017.05.22},
+}
+
+@Article{Symeonidis2013,
+  author        = {Symeonidis, P. and Mantas, N.},
+  title         = {Spectral clustering for link prediction in social networks with positive and negative links},
+  journal       = {Social Network Analysis and Mining},
+  year          = {2013},
+  volume        = {3},
+  number        = {4},
+  pages         = {1433-1447},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/s13278-013-0128-6},
+  file          = {:Spectral clustering for link prediction in social networks with positive and negative links.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
+}
+
+@Article{Symeonidis2013a,
+  author        = {Symeonidis, P. and Iakovidou, N. and Mantas, N. and Manolopoulos, Y.},
+  title         = {From biological to social networks: Link prediction based on multi-way spectral clustering},
+  journal       = {Data \& Knowledge Engineering},
+  year          = {2013},
+  volume        = {87},
+  pages         = {226-242},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.datak.2013.05.008},
+  file          = {:From biological to social networks- Link prediction based on multi-way spectral clustering.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.26},
 }
 
 @Article{Szell2010,
@@ -3878,6 +4048,18 @@
   file      = {:Algorithms and Dynamical Models for Communities and Reputation in Social Networks.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2014.06.19},
+}
+
+@InProceedings{Tyler2003,
+  author    = {Tyler, J. R. and Wilkinson, D. M. and Huberman, B. A.},
+  title     = {Email as spectroscopy: Automated discovery of community structure within organizations},
+  booktitle = {1st International Conference on Communities and Technologies},
+  year      = {2003},
+  pages     = {81-96},
+  file      = {:Email as spectroscopy- Automated discovery of community structure within organizations.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2010.12.29},
+  url       = {http://www.informaworld.com/smpp/content~db=all~content=a713873158~frm=abslink},
 }
 
 @Article{VanderWeele2010,
@@ -4517,15 +4699,15 @@
 
 @Comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
-1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014o\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Ferligoj1994\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Wu2014b\;Wu2015b\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
+1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Atay2014\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014o\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Ferligoj1994\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Lange2015\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Symeonidis2013\;Symeonidis2013a\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Wu2014b\;Wu2015b\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 1 ExplicitGroup:Datasets\;0\;Adamic2005\;Bales1970\;Biswal2010\;Brandes2010\;Costanzo2001\;Ghosn2004\;Hogg2008\;Krebs2002\;Kunegis2013a\;Lemann1952\;Leskovec2010d\;Leskovec2014\;Lusseau2003a\;Maniu2011a\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Neal2014\;Newcomb1961\;Oda2004\;Oda2005\;Poole2011\;Salgado2006\;Sampson1968\;Shwed2010\;Tang2015b\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Yang2012g\;Zachary1977\;;
-1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Al-kazemi2005\;Almendral2010\;Antal2006\;Batagelj2004a\;Belardo2014\;Belardo2016\;Belaza2017\;Bron1973a\;Chen2017d\;Chiang2014\;Clerc2006\;Cohen1960\;Costantini2014\;Doreian2004\;Fisher1936\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Lu2010\;Ludwig2009\;Marvel2011\;Meunier2010\;Molloy1995\;Moscato1989\;Murtagh1983\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Selee2007\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Tang2012c\;Traag2013a\;Uitermark2012\;VanderWeele2010\;William2010\;Xiang2015b\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;Zhang2014w\;;
+1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Al-kazemi2005\;Almendral2010\;Antal2006\;Batagelj2004a\;Belardo2014\;Belardo2016\;Belaza2017\;Bron1973a\;Chen2017d\;Chiang2014\;Clerc2006\;Cohen1960\;Costantini2014\;Doreian2004\;Fisher1936\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary1966\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Lu2010\;Ludwig2009\;Marvel2011\;Meunier2010\;Molloy1995\;Moscato1989\;Murtagh1983\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Selee2007\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Tang2012c\;Traag2013a\;Tyler2003\;Uitermark2012\;VanderWeele2010\;William2010\;Xiang2015b\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;Zhang2014w\;;
 1 ExplicitGroup:Just balance\;0\;Akiyama1981\;Antal2005\;Beigi2016\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;Easley2010a\;ElMaftouhi2012\;Facchetti2012\;Harary1953\;Harary1955\;Harary1960\;Harary1968\;Harary1979\;Harary1980\;Heider1944\;Heider1946\;Inohara2002\;Inohara2002a\;Khanafiah2004\;Kulakowski2007\;Leskovec2010b\;Maayan2008\;Marvel2009\;Norman1972\;Rijt2011\;Schwartz2010\;Srinivasan2011\;Szella2010\;Taylor1967\;Teixeira2017\;Tomescu1973\;Zajonc1965\;Zheng2015b\;;
 1 ExplicitGroup:_Biblionet\;2\;;
-2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Larusso2010\;Lemann1952\;Levin2017\;Levorato2017a\;Li2017b\;Li2017c\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
+2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Atay2014\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Lange2015\;Larusso2010\;Lemann1952\;Levin2017\;Levorato2017a\;Li2017b\;Li2017c\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Symeonidis2013\;Symeonidis2013a\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
 2 ExplicitGroup:Found\;0\;Ahmadizadeh2017\;Amelio2013\;Amelio2016\;Anchuri2012\;Bonacich2004\;Bruggeman2012\;Brusco2010\;Brusco2010a\;Cai2014b\;Cai2015b\;Chang2012b\;Chang2013b\;Chen2014e\;Chen2015h\;Chen2015i\;Chiang2014\;Demaine2006\;Doreian1996\;Doreian2008\;Doreian2009\;Doreian2013\;Drummond2013\;Esmailian2014\;Esmailian2015\;Facchetti2011\;Fang2016\;Figueiredo2013\;GalOnHarel2015\;Gao2015\;Gawronski2015\;Giotis2006\;Gomez2009\;Gong2013b\;Granell2011a\;Hou2005\;Iacono2010\;Jensen2006\;Jiang2015\;Levorato2015\;Li2013g\;Li2015o\;Liu2014d\;Lo2013\;Macon2012\;Mrvar2009\;Mucha2010\;Mucha2010a\;Neda2006\;Qi2016\;Rubinov2011\;Shahriari2015a\;Sharma2009\;Sharma2012a\;Shen2011a\;Sun2014g\;Terzi2011\;Traag2009\;Wu2011g\;Wu2015f\;Yang2006b\;Yang2007\;Yang2007c\;Zeng2015\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 2 ExplicitGroup:Not Found\;0\;Anchuri2011\;Aref2016\;Bogdanov2010\;Chang2017\;Chen2014r\;Chen2017a\;Chen2017b\;Chiang2012\;Cucuringu2013\;Doreian2005\;Gallier2015\;Guo2015c\;Harary1980\;Hassan2012a\;Hsieh2012\;Hu2017\;Kaplan2008\;Kunegis2010\;Kunegis2015a\;Li2010f\;Li2016r\;Li2016s\;Lo2011\;Ma2014d\;Murata2017\;Qi2017\;Santamaria2015\;Sedoc2016\;Shahriari2016a\;Sharma2015\;Shen2013g\;Traag2014\;Wahid2017\;Wu2012f\;Xue2014\;Yan2014\;Yang2015f\;Zaslavsky2010\;Zhang2010g\;;
-2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Al-kazemi2005\;Almendral2010\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Batagelj2004a\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Bron1973a\;Cartwright1956\;Chakraborty2014\;Chen2014o\;Chen2017d\;Clerc2006\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Ferligoj1994\;Fisher1936\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;He-Li2015\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2010\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Meunier2010\;Milo2002\;Molloy1995\;Moscato1989\;Murtagh1983\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Resendel2005\;Richardson2009\;Rijt2011\;Roethlisberger1939\;Rosvall2008\;Rovira-Asenjo2013\;Salgado2006\;Sampson1968\;Selee2007\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2012c\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;Uitermark2012\;VanEssen2012\;Viswanath2009\;Voeten2013\;Wang2013t\;West2014\;William2010\;Wu2012\;Wu2012g\;Wu2014b\;Wu2015b\;Xiang2015b\;Yang2012g\;Yap2015\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zajonc1965\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhan2017a\;Zhang2013s\;Zhang2014w\;;
+2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Al-kazemi2005\;Almendral2010\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Batagelj2004a\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Bron1973a\;Cartwright1956\;Chakraborty2014\;Chen2014o\;Chen2017d\;Clerc2006\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Ferligoj1994\;Fisher1936\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;He-Li2015\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2010\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Meunier2010\;Milo2002\;Molloy1995\;Moscato1989\;Murtagh1983\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Resendel2005\;Richardson2009\;Rijt2011\;Roethlisberger1939\;Rosvall2008\;Rovira-Asenjo2013\;Salgado2006\;Sampson1968\;Selee2007\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2012c\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;Tyler2003\;Uitermark2012\;VanEssen2012\;Viswanath2009\;Voeten2013\;Wang2013t\;West2014\;William2010\;Wu2012\;Wu2012g\;Wu2014b\;Wu2015b\;Xiang2015b\;Yang2012g\;Yap2015\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zajonc1965\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhan2017a\;Zhang2013s\;Zhang2014w\;;
 }
 
 @Comment{jabref-meta: groupsversion:3;}
