solved minor bugs + updated data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -296,6 +296,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1016/j.laa.2013.08.022},
   file          = {:On the spectrum of the normalized Laplacian for signed graphs- Interlacing, contraction, and replication.pdf:PDF},
+  groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
 }
@@ -381,6 +382,21 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.23},
+}
+
+@Article{Bauer2013,
+  author    = {Bauer, F. and Jost, J.},
+  title     = {Bipartite and neighborhood graphs and the spectrum of the normalized graph Laplace operator},
+  journal   = {Communications in Analysis and Geometry},
+  year      = {2013},
+  volume    = {21},
+  number    = {4},
+  pages     = {787-845},
+  doi       = {10.4310/CAG.2013.v21.n4.a2},
+  file      = {:Bipartite and neighborhood graphs and the spectrum of the normalized graph Laplace operator.pdf:PDF},
+  groups    = {Laplacian, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
 }
 
 @TechReport{Becker2005,
@@ -520,6 +536,51 @@
   timestamp = {2014.11.05},
 }
 
+@Article{Bonacich1987,
+  author    = {Bonacich, P. F.},
+  title     = {Power and centrality: A family of measures},
+  journal   = {American Journal of Sociology},
+  year      = {1987},
+  volume    = {92},
+  number    = {5},
+  pages     = {1170-1182},
+  doi       = {10.1086/228631},
+  file      = {:Power and centrality- A family of measures.pdf:PDF},
+  groups    = {Spectral-based, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.07.20},
+}
+
+@Article{Bonacich1991,
+  author    = {Bonacich, P.},
+  title     = {Simultaneous group and individual centralities},
+  journal   = {Social Networks},
+  year      = {1991},
+  volume    = {13},
+  number    = {2},
+  pages     = {155-168},
+  doi       = {10.1016/0378-8733(91)90018-o},
+  file      = {:Simultaneous group and individual centralities.pdf:PDF},
+  groups    = {_Misc Centralities, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
+@Article{Bonacich2001,
+  author    = {Bonacich, P. and Paulette, L.},
+  title     = {Eigenvector-like measures of centrality for asymmetric relations},
+  journal   = {Social Networks},
+  year      = {2001},
+  volume    = {23},
+  number    = {3},
+  pages     = {191-201},
+  doi       = {10.1016/S0378-8733(01)00038-7},
+  file      = {:Eigenvector-like measures of centrality for asymmetric relations.pdf:PDF},
+  groups    = {Spectral-based, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.21},
+}
+
 @Article{Bonacich2004,
   author    = {Bonacich, P. and Lloyd, P.},
   title     = {Calculating status with negative relations},
@@ -532,6 +593,21 @@
   groups    = {Graph Partitioning, Found},
   owner     = {Vincent},
   timestamp = {2015.10.09},
+}
+
+@Article{Borgatti1997,
+  author    = {Borgatti, S. P. and Everett, M. G.},
+  title     = {Network analysis of 2-mode data},
+  journal   = {Social Networks},
+  year      = {1997},
+  volume    = {19},
+  number    = {3},
+  pages     = {243-269},
+  doi       = {10.1016/S0378-8733(96)00301-2},
+  file      = {:Network analysis of 2-mode data.pdf:PDF},
+  groups    = {Bipartite - 2-mode, Multipartite - n-mode Prop, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.06.02},
 }
 
 @Article{Brandes2010,
@@ -1053,6 +1129,21 @@
   timestamp = {2017.04.26},
 }
 
+@Article{Desai1994,
+  author    = {Desai, M. and Rao, V.},
+  title     = {A characterization of the smallest eigenvalue of a graph},
+  journal   = {Journal of Graph Theory},
+  year      = {1994},
+  volume    = {18},
+  number    = {2},
+  pages     = {181-194},
+  doi       = {10.1002/jgt.3190180210},
+  file      = {:A characterization of the smallest eigenvalue of a graph.pdf:PDF},
+  groups    = {Laplacian, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
 @Article{DevadasAcharya1980,
   author    = {Devadas Acharya, B.},
   title     = {Spectral criterion for cycle balance in networks},
@@ -1468,6 +1559,20 @@
   timestamp     = {2017.04.29},
 }
 
+@Article{Galam1997,
+  author    = {Galam, S.},
+  title     = {Rational group decision making: A random field Ising model at T = 0},
+  journal   = {Physica A},
+  year      = {1997},
+  volume    = {238},
+  number    = {1-4},
+  pages     = {66-80},
+  doi       = {10.1016/s0378-4371(96)00456-6},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
 @TechReport{Gallier2015,
   author      = {Gallier, J.},
   title       = {Spectral Theory of Unsigned and Signed Graphs - Applications to Graph Clustering: a Survey},
@@ -1675,6 +1780,7 @@
   volume    = {49},
   pages     = {732-764},
   doi       = {10.1080/01621459.1954.10501231},
+  file      = {:Measures of Association for Cross Classifications.pdf:PDF},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.03.25},
@@ -1693,6 +1799,21 @@
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2011.04.13},
+}
+
+@Article{Gross1985,
+  author    = {Gross, D. J. and Kanter, I. and Sompolinsky, H.},
+  title     = {Mean-field theory of the Potts glass},
+  journal   = {Physical Review Letters},
+  year      = {1985},
+  volume    = {55},
+  number    = {3},
+  pages     = {304-307},
+  doi       = {10.1103/physrevlett.55.304},
+  file      = {:Mean-field theory of the Potts glass.pdf:PDF},
+  groups    = {_Graph-Unrelated, Ignored, Others},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
 }
 
 @Article{Guimera2005,
@@ -2000,6 +2121,21 @@
   url           = {https://vvvvw.aaai.org/Papers/Symposia/Spring/2008/SS-08-06/SS08-06-007.pdf},
 }
 
+@Article{Hotelling1929,
+  author    = {Hotelling, H.},
+  title     = {Stability in Competition},
+  journal   = {Economic Journal},
+  year      = {1929},
+  volume    = {39},
+  number    = {153},
+  pages     = {41},
+  doi       = {10.2307/2224214},
+  file      = {:Stability in Competition.pdf:PDF},
+  groups    = {_Graph-Unrelated, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
 @Article{Hou2003,
   author        = {Hou, Y.-P. and Li, J.-S. and Pan, Y.-L.},
   title         = {On the Laplacian eigenvalues of signed graphs},
@@ -2088,6 +2224,21 @@
   groups    = {Graph Partitioning, Others, Ignored},
   owner     = {Vincent},
   timestamp = {2011.08.30},
+}
+
+@Article{Hubert1985,
+  author    = {Hubert, L. and Arabie, P.},
+  title     = {Comparing partitions},
+  journal   = {Journal of Classification},
+  year      = {1985},
+  volume    = {2},
+  number    = {1},
+  pages     = {193-218},
+  doi       = {10.1007/bf01908075},
+  file      = {:Comparing partitions.pdf:PDF},
+  groups    = {_Graph-Unrelated, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
 }
 
 @Article{Hueffner2010,
@@ -2305,6 +2456,36 @@
   url           = {http://dl.acm.org/citation.cfm?id=2986630},
 }
 
+@Article{Kirkpatrick1987,
+  author    = {Kirkpatrick, T. R. and Wolynes, P. G.},
+  title     = {Stable and metastable states in mean-field Potts and structural glasses},
+  journal   = {Physical Review B},
+  year      = {1987},
+  volume    = {36},
+  number    = {16},
+  pages     = {8552-8564},
+  doi       = {10.1103/physrevb.36.8552},
+  file      = {:Stable and metastable states in mean-field Potts and structural glasses.pdf:PDF},
+  groups    = {_Graph-Unrelated, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
+@Article{Kirkpatrick1988,
+  author    = {Kirkpatrick, T. R. and Thirumalai, D.},
+  title     = {Mean-field soft-spin Potts glass model: Statics and dynamics},
+  journal   = {Physical Review B},
+  year      = {1988},
+  volume    = {37},
+  number    = {10},
+  pages     = {5342-5350},
+  doi       = {10.1103/physrevb.37.5342},
+  file      = {:Mean-field soft-spin Potts glass model- Statics and dynamics.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
 @Book{Knuth1994,
   title     = {Stanford GraphBase: A Platform for Combinatorial Computing},
   publisher = {Addison-Wesley},
@@ -2498,6 +2679,21 @@
   url           = {http://gswc.cs.ucsb.edu/2010/proceedings.pdf#page=38},
 }
 
+@Article{Latapy2008a,
+  author    = {Latapy, M. and Magnien, C. and del Vecchio, N.},
+  title     = {Basic Notions for the Analysis of Large Two-mode Networks},
+  journal   = {Social Networks},
+  year      = {2008},
+  volume    = {30},
+  number    = {1},
+  pages     = {31-48},
+  doi       = {10.1016/j.socnet.2007.04.006},
+  file      = {:Basic notions for the analysis of large two-mode networks.pdf:PDF},
+  groups    = {Bipartite - 2-mode, Multipartite - n-mode Prop, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.06.02},
+}
+
 @Article{Lemann1952,
   author        = {Lemann, T. B. and Solomon, R. L.},
   title         = {Group Characteristics as Revealed in Sociometric Patterns and Personality Ratings},
@@ -2621,6 +2817,7 @@
   file          = {:An upper bound on the Laplacian spectral radius of the signed graphs.pdf:PDF},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
+  url           = {https://pdfs.semanticscholar.org/bd8e/44f1972e59c30dce2117466ea16fdafe2170.pdf},
 }
 
 @Article{Li2009d,
@@ -3288,6 +3485,21 @@
   owner     = {Vincent},
   timestamp = {2016.01.06},
   url       = {https://books.google.fr/books?id=YO4EAAAAMAAJ},
+}
+
+@Article{Newman2001a,
+  author    = {Newman, M. E. J.},
+  title     = {The structure of scientific collaboration networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2001},
+  volume    = {98},
+  number    = {2},
+  pages     = {404-409},
+  doi       = {10.1073/pnas.98.2.404},
+  file      = {:The structure of scientific collaboration networks.pdf:PDF},
+  groups    = {Collaborations - Citations, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Newman2004,
@@ -4062,6 +4274,21 @@
   timestamp = {2017.06.25},
 }
 
+@Article{Snyder1979,
+  author    = {Snyder, D. and Kick, E. L.},
+  title     = {Structural Position in the World System and Economic Growth, 1955-1970: A Multiple-Network Analysis of Transnational Interactions},
+  journal   = {American Journal of Sociology},
+  year      = {1979},
+  volume    = {84},
+  number    = {5},
+  pages     = {1096-1126},
+  doi       = {10.1086/226902},
+  file      = {:Structural Position in the World System and Economic Growth, 1955-1970- A Multiple-Network Analysis of Transnational Interactions.pdf:PDF},
+  groups    = {Politics - International Relations, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
 @Article{Sontag2007,
   author    = {Sontag, E. D.},
   title     = {Monotone and near-monotone biochemical networks},
@@ -4368,6 +4595,46 @@
   groups    = {Not Found},
   owner     = {Vincent},
   timestamp = {2014.06.19},
+}
+
+@InProceedings{Trevisan2009,
+  author    = {Trevisan, L.},
+  title     = {Max cut and the smallest eigenvalue},
+  booktitle = {ACM International Symposium on Theory of Computing},
+  year      = {2009},
+  pages     = {263-271},
+  doi       = {10.1145/1536414.1536452},
+  file      = {:Max cut and the smallest eigenvalue (STOC09).pdf:PDF},
+  groups    = {Laplacian, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
+@Article{Trevisan2009a,
+  author    = {Trevisan, L.},
+  title     = {Max cut and the smallest eigenvalue},
+  journal   = {SIAM Journal on Computing},
+  year      = {2009},
+  volume    = {41},
+  number    = {6},
+  pages     = {1769-1786},
+  doi       = {10.1137/090773714},
+  file      = {:Max cut and the smallest eigenvalue.pdf:PDF},
+  groups    = {Laplacian, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
+}
+
+@InProceedings{Tsourakakis2008,
+  author    = {Tsourakakis, C. E.},
+  title     = {Fast Counting of Triangles in Large Real Networks without Counting: Algorithms and Laws},
+  booktitle = {8th IEEE International Conference on Data Mining},
+  year      = {2008},
+  doi       = {10.1109/icdm.2008.72},
+  file      = {:Fast Counting of Triangles in Large Real Networks without Counting- Algorithms and Laws.pdf:PDF},
+  groups    = {Cycles - Loops - Transitivity, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
 }
 
 @InProceedings{Tyler2003,
@@ -4766,6 +5033,20 @@
   groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.15},
+}
+
+@Article{Yokota1995,
+  author    = {Yokota, T.},
+  title     = {Ordered phase for the infinite-range Potts-glass model},
+  journal   = {Physical Review B},
+  year      = {1995},
+  volume    = {51},
+  number    = {2},
+  pages     = {962-971},
+  doi       = {10.1103/physrevb.51.962},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.27},
 }
 
 @Book{Young1971,
